# easy_camera_lidar_calibration

./: CMakeLists.txt  README.md  package.xml
config/: config.yaml
include/: lidar2pcd.hpp
launch/: calibration.launch  lidar2pcd.launch  to_pointcloud2.launch
scripts/: Equirec2Perspec.py  calibration.py  render_depthmap.py
src/: lidar2pcd.cpp  to_pointcloud2.cpp
